<resources>
    <string name="app_name">Filem</string>
    <string name="en_text_welcome">Welcome </string>
    <string name="en_text_username">username </string>
    <string name="en_text_greeting">Discover, Discuss, Delight</string>
    <string name="en_text_movie">Movie</string>
    <string name="en_text_tv">TV Show</string>
    <string name="en_text_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="en_text_search">Search</string>
    <string name="en_text_retry">Retry\n</string>
    <string name="en_text_filter_now_playing">Now Playing</string>
    <string name="en_text_filter_upcoming">Up Coming</string>
    <string name="en_text_filter_airing_today">Airing Today</string>
    <string name="en_text_filter_on_the_air">On The Air</string>
    <string name="en_text_loading">Loading..</string>
    <string name="en_text_filter_popular">Popular</string>
    <string name="en_text_filter_top_rated">Top Rated</string>
    <string name="en_text_title_cast">Cast</string>
    <string name="en_text_title_video">Videos</string>
    <string name="en_text_search_here">Search Here</string>
    <string name="en_text_not_found">Not Found</string>
    <string name="en_text_title">Title</string>
    <string name="en_text_year">2023</string>
    <string name="en_text_discover">Discover</string>
    <string name="en_text_favorite">Favorite</string>
    <string name="en_text_biography">Biography</string>
    <string name="resizable_text_read_more">... read more</string>
    <string name="resizable_text_read_less"> read less</string>
    <string name="en_text_no_bio">We don\'t have a biography for %1$s.</string>
    <string name="tab_cast_1">Overview</string>
    <string name="tab_cast_2">Personal Info</string>
    <string name="en_text_female">Female</string>
    <string name="en_text_male">Male</string>
    <string name="en_text_no_binary">Non binary</string>
    <string name="en_text_home">Home</string>
    <string name="en_text_trending">Trending</string>
    <string name="en_text_trending_movies">Trending Movies</string>
    <string name="en_text_trending_tvs">Trending Tv</string>
    <string name="en_text_popular_people">Popular People</string>
    <string name="tab_detail_tv_1">Overview</string>
    <string name="tab_detail_tv_2">Seasons Info</string>
    <string name="en_text_symbol">•</string>
    <string name="en_text_number">8</string>
    <string name="en_text_episodes">Episodes</string>
    <string name="en_text_fav_movie">Favorite Movies</string>
    <string name="en_text_fav_tv">Favorite Tv</string>
    <string-array name="spinner_values">
        <item>Movie</item>
        <item>Tv 2</item>
        <item>Person</item>
    </string-array>

    <!-- || SPLASH & ONBOARDING ACTIVITY || -->
    <string name="text_onboard_desc_1">One click away from your favorite movies and tv shows</string>
    <string name="text_onboard_desc_2">Entertain yourself like never before in your life</string>

    <!-- || HOME FRAGMENT || -->
    <string name="logout_text">Are you sure you want to log out ?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="en_text_thread_title">Thread Title</string>
    <string name="what_do_you_want_to_discuss">What do you want to discuss</string>
    <string name="text_container_display_creator_thread">Created by %s</string>
    <string name="text_empty_data">No Data</string>
    <string name="text_error_empty_title">Please input thread title !</string>
    <string name="text_error_empty_body">Please Input Thread !</string>
    <string name="text_empty_data_subthread">No chat available</string>
    <string name="en_text_join">Join</string>
    <string name="en_text_discussion">Discussion</string>

    <!-- || Favorite Activity || -->
    <string name="en_text_no_favorite_tv">No Favorite Tv</string>
    <string name="en_text_no_favorite_movie">No Favorite Movie</string>

    <!-- || Profile Fragment || -->
    <string name="en_text_preferences">Preferences</string>
    <string name="en_text_language">Language</string>
    <string name="en_text_dark_mode">Dark Mode</string>
    <string name="en_text_adult_mode">Adult Mode</string>
    <string name="en_text_logout">Log Out</string>
    <string-array name="spinner_language">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>

</resources>