<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.so.filem.ui.movie.search.SearchFragment"
        android:label="@string/en_text_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.so.filem.ui.movie.filter.MovieFragment"
        android:label="@string/en_text_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.so.filem.ui.movie.favorite.FavoriteFragment"
        android:label="@string/en_text_favorite"
        tools:layout="@layout/fragment_favorite"/>

</navigation>