<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/_11sdp"
    android:paddingStart="@dimen/_11sdp"
    android:paddingEnd="@dimen/_11sdp"
    android:paddingBottom="@dimen/_4sdp"
    android:background="@color/dark_blue">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/_43sdp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/off_white_400"
                android:text="@string/en_text_welcome"/>

            <TextView
                android:id="@+id/txt_username"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/off_white_400"
                android:text="@string/en_text_username"/>

            <ImageView
                android:id="@+id/iv_logout"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_3sdp"
                android:src="@drawable/ic_logout" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/light_blue"
            android:text="@string/en_text_greeting"/>
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/_43sdp"
        android:layout_height="@dimen/_43sdp"
        android:src="@drawable/ic_logo"/>
</LinearLayout>