<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_poster_season"
            android:layout_width="@dimen/_57sdp"
            android:layout_height="@dimen/_86sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_poster" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en_text_title"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_gravity="">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:strokeColor="@color/light_blue"
                    app:backgroundTint="@color/dark_blue"
                    app:strokeWidth="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_6sdp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_blue"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/iv_star"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_margin="@dimen/_2sdp"
                            android:background="@drawable/ic_star"
                            android:backgroundTint="@color/light_green"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="contentDescription" />

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:layout_marginEnd="@dimen/_4sdp"
                            android:layout_marginBottom="@dimen/_2sdp"
                            android:fontFamily="@font/inter_regular"
                            android:textAlignment="center"
                            android:textColor="@color/light_green"
                            android:textSize="@dimen/_8ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/iv_star"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="8.9" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_text_year"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_10ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_text_symbol"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_11ssp" />
                <TextView
                    android:id="@+id/tv_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_text_number"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_10ssp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_text_episodes"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_synopsis_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_11ssp"
                android:maxLines="2"
                tools:text="lorem"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
