<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ci_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                tools:text="username"
                android:textSize="@dimen/_18ssp"

                app:layout_constraintStart_toEndOf="@+id/ci_image"
                app:layout_constraintTop_toTopOf="@+id/ci_image" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                tools:text="email"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@id/ci_image"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_profile">

            <TextView
                android:id="@+id/tv_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/en_text_preferences"
                android:paddingBottom="@dimen/_6sdp"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_preferences"
                >
                <LinearLayout
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    >
                    <ImageView
                        android:id="@+id/iv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_language" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/en_text_language"
                        android:textSize="@dimen/_12ssp"
                        android:layout_weight="3"
                        android:layout_marginStart="@dimen/_5sdp"
                        />

                    <Spinner
                        android:id="@+id/spinner_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/spinner_language"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item"/>
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_language">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/iv_dark_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_dark_mode" />

                    <TextView
                        android:id="@+id/tv_dark_mode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="3"
                        android:text="@string/en_text_dark_mode"
                        android:textSize="@dimen/_12ssp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sw_dark_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/en_text_logout"
            app:layout_constraintTop_toBottomOf="@id/cl_preference"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>